--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,113 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
   <title>Virtual Model Hub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    body {
+      background: black;
+      color: white;
+      overflow: hidden;
+    }
+
+    .video-bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+      z-index: -1;
+      filter: brightness(0.6) contrast(1.1);
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to bottom, rgba(0,0,0,0.3), rgba(0,0,0,0.8));
+    }
+
+    .content {
+      position: relative;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 3rem;
+      letter-spacing: 2px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 1.2rem;
+      opacity: 0.85;
+      margin-bottom: 40px;
+    }
+
+    .cta {
+      padding: 15px 40px;
+      font-size: 1.1rem;
+      border: none;
+      border-radius: 30px;
+      background: red;
+      color: white;
+      cursor: pointer;
+      transition: transform 0.2s, background 0.2s;
+    }
+
+    .cta:hover {
+      background: darkred;
+      transform: scale(1.05);
+    }
+
+    .footer {
+      position: absolute;
+      bottom: 15px;
+      font-size: 0.8rem;
+      opacity: 0.6;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>Virtual Model Hub</h1>
-  <p>Demo IA cargando…</p>
+
+  <!-- VIDEO LOOP -->
+  <video class="video-bg" autoplay muted loop playsinline>
+    <source src="loop.mp4" type="video/mp4">
+  </video>
+
+  <div class="overlay"></div>
+
+  <div class="content">
+    <h1>Live AI Models</h1>
+    <p>24/7 · Virtual · NSFW</p>
+
+    <button class="cta" onclick="location.href='/live.html'">
+      ENTER LIVE
+    </button>
+
+    <div class="footer">
+      © Virtual Model Hub · 18+ Only
+    </div>
+  </div>
+
 </body>
 </html>
