--- a/public/live.html
+++ b/public/live.html
@@ -16,7 +16,7 @@
 
     video {
       width: 100%;
-      max-height: 90vh;
+      height: 80vh;
       object-fit: cover;
     }
 
@@ -27,13 +27,39 @@
     .viewers {
       color: red;
       font-weight: bold;
-      margin-top: 10px;
+      margin-top: 8px;
+    }
+
+    .tip-box {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: rgba(0,0,0,0.85);
+      padding: 15px 20px;
+      border-radius: 30px;
+      box-shadow: 0 0 15px rgba(255,0,0,0.4);
+    }
+
+    .tip-btn {
+      background: red;
+      color: white;
+      border: none;
+      padding: 12px 25px;
+      font-size: 1rem;
+      border-radius: 25px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .tip-btn:hover {
+      background: darkred;
     }
   </style>
 </head>
 
 <body>
 
+  <!-- VIDEO LOOP -->
   <video autoplay muted loop playsinline>
     <source src="loop.mp4" type="video/mp4">
   </video>
@@ -41,6 +67,13 @@
   <div class="info">
     <h2>AI Model · LIVE</h2>
     <div class="viewers">🔴 1,243 watching</div>
+  </div>
+
+  <!-- TIP BUTTON -->
+  <div class="tip-box">
+    <button class="tip-btn" onclick="window.open('https://fanvue.com/arialora', '_blank')">
+      ❤️ Tip this model
+    </button>
   </div>
 
 </body>
