--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,11 @@
       background: black;
       color: white;
       overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
 
     .video-bg {
@@ -41,13 +46,11 @@
 
     .content {
       position: relative;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
       text-align: center;
       padding: 20px;
+      z-index: 1;
+      width: 100%;
+      max-width: 400px;
     }
 
     h1 {
@@ -62,14 +65,19 @@
       margin-bottom: 40px;
     }
 
-    .cta {
-      padding: 15px 40px;
-      font-size: 1.1rem;
+    .cta, .login-btn, .signup-btn {
+      padding: 12px 30px;
+      font-size: 1rem;
       border: none;
-      border-radius: 30px;
+      border-radius: 25px;
+      cursor: pointer;
+      margin: 5px;
+      font-weight: bold;
+    }
+
+    .cta {
       background: red;
       color: white;
-      cursor: pointer;
       transition: transform 0.2s, background 0.2s;
     }
 
@@ -78,12 +86,44 @@
       transform: scale(1.05);
     }
 
+    .login-btn {
+      background: #00bfff;
+      color: white;
+    }
+
+    .login-btn:hover { background: #0099cc; }
+
+    .signup-btn {
+      background: #28a745;
+      color: white;
+    }
+
+    .signup-btn:hover { background: #218838; }
+
+    input {
+      width: 90%;
+      padding: 10px;
+      margin: 8px 0;
+      border-radius: 5px;
+      border: none;
+      font-size: 1rem;
+    }
+
+    .login-container {
+      background: rgba(0,0,0,0.7);
+      padding: 20px;
+      border-radius: 15px;
+    }
+
     .footer {
       position: absolute;
       bottom: 15px;
       font-size: 0.8rem;
       opacity: 0.6;
+      width: 100%;
+      text-align: center;
     }
+
   </style>
 </head>
 
@@ -104,10 +144,41 @@
       ENTER LIVE
     </button>
 
+    <div style="margin-top:30px;" class="login-container">
+      <h3>Creator Access</h3>
+      <input type="email" id="email" placeholder="Email" required><br>
+      <input type="password" id="password" placeholder="Password" required><br>
+      <button class="signup-btn" onclick="signup()">Sign Up</button>
+      <button class="login-btn" onclick="login()">Login</button>
+    </div>
+
     <div class="footer">
       © Virtual Model Hub · 18+ Only
     </div>
   </div>
+
+  <script>
+    // LOGIN / SIGNUP SIMPLE
+    function signup() {
+      let email = document.getElementById('email').value;
+      let password = document.getElementById('password').value;
+      if (!email || !password) { alert("Fill both fields"); return; }
+      localStorage.setItem(email, password);
+      localStorage.setItem('currentUser', email);
+      window.location.href = "/creator/dashboard.html";
+    }
+
+    function login() {
+      let email = document.getElementById('email').value;
+      let password = document.getElementById('password').value;
+      if (localStorage.getItem(email) === password) {
+        localStorage.setItem('currentUser', email);
+        window.location.href = "/creator/dashboard.html";
+      } else {
+        alert("Invalid email or password");
+      }
+    }
+  </script>
 
 </body>
 </html>
