--- a/public/creator/dashboard.html
+++ b/public/creator/dashboard.html
@@ -43,7 +43,7 @@ function uploadLoop(){
     let file=document.getElementById('videoFile').files[0];
     if(!file){alert("Selecciona un archivo mp4"); return;}
     let duration=Math.floor(file.size/1000000*10); // duración simulada
-    loops.push({owner:user,name:file.name,duration:duration,active:true,tipLink:'https://TU-LINK-DE-PAGO-AQUI'});
+    loops.push({owner:user,name:file.name,duration:duration,active:true,tipLink:'https://www.fanvue.com/arialora'});
     saveLoops();
 }
 
