--- a/public/creator/dashboard.html
+++ b/public/creator/dashboard.html
@@ -6,8 +6,11 @@
 <title>Creator Dashboard</title>
 <style>
 body{font-family:Arial;background:#111;color:white;padding:20px;}
-button{padding:10px 15px;margin:5px;border:none;border-radius:5px;cursor:pointer;background:red;color:white;}
-.loop-item{border:1px solid #333;padding:10px;margin:10px 0;border-radius:5px;display:flex;justify-content:space-between;align-items:center;}
+input,button{padding:10px 15px;margin:5px;border:none;border-radius:5px;cursor:pointer;}
+button{background:red;color:white;}
+.loop-item{border:1px solid #333;padding:10px;margin:10px 0;border-radius:5px;display:flex;flex-direction:column;}
+.loop-controls{display:flex;justify-content:flex-start;gap:10px;margin-top:5px;}
+video{max-width:300px;border-radius:5px;margin-bottom:5px;}
 </style>
 </head>
 <body>
@@ -29,13 +32,34 @@ function saveLoops(){ localStorage.setItem('loops',JSON.stringify(loops)); rende
 function renderLoops(){
   let container=document.getElementById('loopsContainer');
   container.innerHTML="";
+  // Filtrar solo loops del usuario
   loops.filter(l=>l.owner===user).forEach((loop,i)=>{
-    let div=document.createElement('div'); div.className="loop-item";
-    div.innerHTML=`${loop.name} (${loop.duration} s) 
-      <div>
-        <button onclick="toggleLoop(${i})">${loop.active?"Deactivate":"Activate"}</button>
-        <button onclick="deleteLoop(${i})">Delete</button>
-      </div>`;
+    let div=document.createElement('div'); 
+    div.className="loop-item";
+
+    // Video player
+    let videoEl=document.createElement('video');
+    videoEl.src=loop.url||URL.createObjectURL(loop.fileBlob||new Blob()); // fallback
+    videoEl.controls=true;
+    videoEl.loop=true;
+    div.appendChild(videoEl);
+
+    // Nombre y duración
+    let info=document.createElement('div');
+    info.innerText=`${loop.name} (${loop.duration}s)`;
+    div.appendChild(info);
+
+    // Botones de control
+    let controls=document.createElement('div'); controls.className="loop-controls";
+    let toggleBtn=document.createElement('button');
+    toggleBtn.innerText=loop.active?"Deactivate":"Activate";
+    toggleBtn.onclick=()=>{ loops[i].active=!loops[i].active; saveLoops(); };
+    let deleteBtn=document.createElement('button');
+    deleteBtn.innerText="Delete";
+    deleteBtn.onclick=()=>{ loops.splice(i,1); saveLoops(); };
+    controls.appendChild(toggleBtn); controls.appendChild(deleteBtn);
+    div.appendChild(controls);
+
     container.appendChild(div);
   });
 }
@@ -43,13 +67,14 @@ function renderLoops(){
 function uploadLoop(){
   let file=document.getElementById('videoFile').files[0];
   if(!file){alert("Selecciona un archivo mp4");return;}
+
+  // Crear URL temporal para previsualizar
+  let fileURL=URL.createObjectURL(file);
   let duration=Math.floor(file.size/1000000*10); // simula duración
-  loops.push({owner:user,name:file.name,duration:duration,active:true});
+
+  loops.push({owner:user,name:file.name,duration:duration,active:true,url:fileURL,fileBlob:file});
   saveLoops();
 }
-
-function toggleLoop(i){ loops[i].active=!loops[i].active; saveLoops(); }
-function deleteLoop(i){ loops.splice(i,1); saveLoops(); }
 
 renderLoops();
 </script>
