--- a/public/live.html
+++ b/public/live.html
@@ -1,80 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AI Model Live</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    body {
-      margin: 0;
-      background: black;
-      color: white;
-      font-family: Arial, Helvetica, sans-serif;
-      text-align: center;
-    }
-
-    video {
-      width: 100%;
-      height: 80vh;
-      object-fit: cover;
-    }
-
-    .info {
-      padding: 15px;
-    }
-
-    .viewers {
-      color: red;
-      font-weight: bold;
-      margin-top: 8px;
-    }
-
-    .tip-box {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: rgba(0,0,0,0.85);
-      padding: 15px 20px;
-      border-radius: 30px;
-      box-shadow: 0 0 15px rgba(255,0,0,0.4);
-    }
-
-    .tip-btn {
-      background: red;
-      color: white;
-      border: none;
-      padding: 12px 25px;
-      font-size: 1rem;
-      border-radius: 25px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    .tip-btn:hover {
-      background: darkred;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AI Model Live</title>
+<style>
+body{margin:0;background:black;color:white;font-family:Arial;text-align:center;}
+video{width:100%;height:80vh;object-fit:cover;}
+.info{padding:15px;}
+.viewers{color:red;font-weight:bold;margin-top:8px;}
+.tip-box{position:fixed;bottom:20px;right:20px;background:rgba(0,0,0,0.85);padding:15px 20px;border-radius:30px;box-shadow:0 0 15px rgba(255,0,0,0.4);}
+.tip-btn{background:red;color:white;border:none;padding:12px 25px;font-size:1rem;border-radius:25px;cursor:pointer;font-weight:bold;}
+.tip-btn:hover{background:darkred;}
+</style>
 </head>
-
 <body>
 
-  <!-- VIDEO LOOP -->
-  <video autoplay muted loop playsinline>
-    <source src="loop.mp4" type="video/mp4">
-  </video>
+<video id="liveVideo" autoplay muted loop playsinline>
+  <source src="loop.mp4" type="video/mp4">
+</video>
 
-  <div class="info">
-    <h2>AI Model · LIVE</h2>
-    <div class="viewers">🔴 1,243 watching</div>
-  </div>
+<div class="info">
+  <h2>AI Model · LIVE</h2>
+  <div class="viewers">🔴 1,243 watching</div>
+</div>
 
-  <!-- TIP BUTTON -->
-  <div class="tip-box">
-    <button class="tip-btn" onclick="window.open('https://fanvue.com/arialora', '_blank')">
-      ❤️ Tip this model
-    </button>
-  </div>
+<div class="tip-box">
+  <button class="tip-btn" onclick="tip()">❤️ Tip this model</button>
+</div>
 
+<script>
+// Obtener loop activo desde dashboard
+let activeURL = localStorage.getItem('activeLoopURL');
+if(activeURL){
+    document.getElementById('liveVideo').src = activeURL;
+}
+
+function tip(){
+    window.open("https://TU-LINK-DE-PAGO-AQUI",'_blank');
+}
+
+// Opcional: refrescar cada 5s para detectar cambios de loop
+setInterval(()=>{
+    let url = localStorage.getItem('activeLoopURL');
+    if(url && document.getElementById('liveVideo').src !== url){
+        document.getElementById('liveVideo').src = url;
+    }
+},5000);
+
+</script>
 </body>
 </html>
