--- a/public/creator/live.html
+++ b/public/creator/live.html
@@ -30,34 +30,26 @@ video{width:100%;height:80vh;object-fit:cover;}
 </div>
 
 <script>
-// Obtener el usuario del query param ?user=nombre
 const urlParams = new URLSearchParams(window.location.search);
 const user = urlParams.get('user') || "default";
 
-// Mostrar nombre de creador
 document.getElementById('creatorName').innerText = `${user} · LIVE`;
 
-// Cargar loops desde localStorage
 let loops = JSON.parse(localStorage.getItem('loops') || "[]");
-
-// Buscar loop activo de este creador
 let activeLoop = loops.find(l => l.owner === user && l.active);
 
-// Obtener el video
 const videoEl = document.getElementById('liveVideo');
 if(activeLoop){
     videoEl.src = activeLoop.url;
 } else {
-    // Si no hay loop activo, mostrar loop por defecto
     videoEl.src = "loop.mp4";
 }
 
-// Botón de propina
 function tip(){
     window.open("https://TU-LINK-DE-PAGO-AQUI",'_blank');
 }
 
-// Opcional: refrescar cada 5s para detectar cambios de loop del creador
+// Refrescar cada 5s para detectar cambios
 setInterval(()=>{
     loops = JSON.parse(localStorage.getItem('loops') || "[]");
     let activeLoop = loops.find(l => l.owner === user && l.active);
@@ -65,7 +57,6 @@ setInterval(()=>{
         videoEl.src = activeLoop.url;
     }
 }, 5000);
-
 </script>
 </body>
 </html>
