--- a/public/index.html
+++ b/public/index.html
@@ -6,26 +6,108 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif; }
-    body { background: black; color: white; overflow: hidden; }
-    .video-bg { position: fixed; top:0; left:0; width:100vw; height:100vh; object-fit:cover; z-index:-1; filter: brightness(0.6) contrast(1.1); }
-    .overlay { position: absolute; top:0; left:0; width:100%; height:100%; background: linear-gradient(to bottom, rgba(0,0,0,0.3), rgba(0,0,0,0.8)); }
-    .content { position: relative; height: 100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; padding:20px; }
-    h1 { font-size:3rem; letter-spacing:2px; margin-bottom:20px; }
-    p { font-size:1.2rem; opacity:0.85; margin-bottom:40px; }
-    .footer { position:absolute; bottom:15px; font-size:0.8rem; opacity:0.6; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
-    /* Lista de creadores */
-    .creators-list { display:flex; flex-wrap:wrap; justify-content:center; gap:15px; max-width:90vw; margin-top:20px; }
-    .creator-card { background: rgba(255,255,255,0.05); padding:20px; border-radius:15px; width:180px; text-align:center; transition: transform 0.2s, background 0.2s; }
-    .creator-card:hover { transform: scale(1.05); background: rgba(255,255,255,0.12); }
-    .creator-card a { color:white; text-decoration:none; font-weight:bold; font-size:1.1rem; }
+    body {
+      background: black;
+      color: white;
+      overflow: hidden;
+    }
+
+    .video-bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+      z-index: -1;
+      filter: brightness(0.6) contrast(1.1);
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to bottom, rgba(0,0,0,0.3), rgba(0,0,0,0.85));
+    }
+
+    .content {
+      position: relative;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 3rem;
+      letter-spacing: 2px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.2rem;
+      opacity: 0.85;
+      margin-bottom: 35px;
+    }
+
+    .creators-list {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 18px;
+      max-width: 95vw;
+    }
+
+    .creator-card {
+      background: rgba(255,255,255,0.06);
+      padding: 18px 22px;
+      border-radius: 18px;
+      min-width: 180px;
+      transition: transform 0.2s ease, background 0.2s ease;
+      backdrop-filter: blur(6px);
+    }
+
+    .creator-card:hover {
+      transform: scale(1.06);
+      background: rgba(255,255,255,0.14);
+    }
+
+    .creator-card a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.15rem;
+    }
+
+    .live-dot {
+      color: red;
+      margin-right: 6px;
+    }
+
+    .footer {
+      position: absolute;
+      bottom: 15px;
+      font-size: 0.8rem;
+      opacity: 0.6;
+    }
   </style>
 </head>
 
 <body>
 
-  <!-- VIDEO LOOP -->
+  <!-- VIDEO BACKGROUND -->
   <video class="video-bg" autoplay muted loop playsinline>
     <source src="loop.mp4" type="video/mp4">
   </video>
@@ -36,7 +118,9 @@
     <h1>Live AI Models</h1>
     <p>24/7 · Virtual · NSFW</p>
 
-    <div class="creators-list" id="creatorsList"></div>
+    <div class="creators-list" id="creatorsList">
+      <!-- Creators injected here -->
+    </div>
 
     <div class="footer">
       © Virtual Model Hub · 18+ Only
@@ -44,20 +128,30 @@
   </div>
 
   <script>
-    // Lista de creadores de prueba
-    let users = ["creadora1","creadora2","creadora3"];
+    const container = document.getElementById("creatorsList");
 
-    const listContainer = document.getElementById('creatorsList');
-    users.forEach(u=>{
-        const card = document.createElement('div');
-        card.className = "creator-card";
+    // Leer loops
+    const loops = JSON.parse(localStorage.getItem("loops") || "[]");
 
-        const link = document.createElement('a');
-        link.href = `../creator/live.html?user=${u}`;
-        link.innerText = u;
+    // Obtener solo creadores con loop activo
+    const activeCreators = [...new Set(
+      loops.filter(l => l.active).map(l => l.owner)
+    )];
 
-        card.appendChild(link);
-        listContainer.appendChild(card);
+    if (activeCreators.length === 0) {
+      container.innerHTML = "<p style='opacity:.6'>No models live right now</p>";
+    }
+
+    activeCreators.forEach(user => {
+      const card = document.createElement("div");
+      card.className = "creator-card";
+
+      const link = document.createElement("a");
+      link.href = `/creator/live.html?user=${encodeURIComponent(user)}`;
+      link.innerHTML = `<span class="live-dot">🔴</span>${user}`;
+
+      card.appendChild(link);
+      container.appendChild(card);
     });
   </script>
 
