--- a/public/creator/index.html
+++ b/public/creator/index.html
@@ -8,20 +8,61 @@
 body{font-family:Arial;background:#111;color:white;text-align:center;padding:50px;}
 input,button{padding:10px 15px;margin:5px;border:none;border-radius:5px;}
 button{background:red;color:white;cursor:pointer;}
+#msg{margin-top:15px;color:yellow;}
 </style>
+
+<!-- 1️⃣ Supabase JS -->
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+<script>
+  // 2️⃣ Sustituye con tu proyecto real
+  const SUPABASE_URL = "https://TU-PROYECTO.supabase.co";
+  const SUPABASE_ANON_KEY = "TU_ANON_PUBLIC_KEY";
+  const supabase = supabaseJs.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+</script>
 </head>
 <body>
 <h1>Login / Signup</h1>
-<input type="text" id="email" placeholder="Enter your email">
-<br>
-<button onclick="login()">Enter</button>
 
+<!-- 3️⃣ Formulario -->
+<input type="email" id="email" placeholder="Enter your email">
+<input type="password" id="password" placeholder="Enter a password (6+ chars)">
+<br>
+<button onclick="signUp()">Sign Up</button>
+<button onclick="signIn()">Login</button>
+
+<p id="msg"></p>
+
+<!-- 4️⃣ Script login/signup -->
 <script>
-function login(){
-    let email = document.getElementById('email').value.trim();
-    if(!email){ alert("Enter a valid email"); return;}
-    localStorage.setItem('currentUser',email);
-    window.location.href="dashboard.html";
+async function signUp(){
+    const email = document.getElementById('email').value.trim();
+    const password = document.getElementById('password').value.trim();
+    if(!email || !password){ alert("Email and password required"); return;}
+    
+    // 4a️⃣ Crear usuario en Supabase Auth
+    const { data, error } = await supabase.auth.signUp({ email, password });
+    if(error){ document.getElementById('msg').innerText = error.message; return;}
+    
+    // 4b️⃣ Crear fila en tabla creators
+    await supabase.from("creators").insert({
+        id: data.user.id,
+        username: email.split("@")[0],
+        display_name: email.split("@")[0]
+    });
+
+    document.getElementById('msg').innerText = "Signup OK! You can now login.";
+}
+
+async function signIn(){
+    const email = document.getElementById('email').value.trim();
+    const password = document.getElementById('password').value.trim();
+    if(!email || !password){ alert("Email and password required"); return;}
+
+    const { data, error } = await supabase.auth.signInWithPassword({ email, password });
+    if(error){ document.getElementById('msg').innerText = error.message; return;}
+
+    // ✅ Redirige a dashboard del creador
+    window.location.href = "dashboard.html";
 }
 </script>
 </body>
