--- a/public/creator/live.html
+++ b/public/creator/live.html
@@ -3,60 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AI Model Live</title>
+<title>Live Stream</title>
 <style>
-body{margin:0;background:black;color:white;font-family:Arial;text-align:center;}
-video{width:100%;height:80vh;object-fit:cover;}
-.info{padding:15px;}
-.viewers{color:red;font-weight:bold;margin-top:8px;}
-.tip-box{position:fixed;bottom:20px;right:20px;background:rgba(0,0,0,0.85);padding:15px 20px;border-radius:30px;box-shadow:0 0 15px rgba(255,0,0,0.4);}
-.tip-btn{background:red;color:white;border:none;padding:12px 25px;font-size:1rem;border-radius:25px;cursor:pointer;font-weight:bold;}
-.tip-btn:hover{background:darkred;}
+body{margin:0;background:black;display:flex;justify-content:center;align-items:center;height:100vh;}
+video{width:100%;height:100%;object-fit:cover;}
 </style>
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+<script>
+const SUPABASE_URL = "TU_SUPABASE_URL";
+const SUPABASE_ANON_KEY = "TU_ANON_PUBLIC_KEY";
+const supabase = supabaseJs.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
+async function loadLoop(){
+    const ownerId = new URLSearchParams(window.location.search).get('user'); // ?user=UUID
+    if(!ownerId){ document.body.innerHTML="<h2 style='color:white;'>User not specified</h2>"; return; }
+
+    const { data: loops } = await supabase.from('loops').select('*').eq('owner', ownerId).eq('active', true).order('created_at',{ascending:false}).limit(1);
+    if(loops.length>0){
+        const video = document.createElement('video');
+        video.src = loops[0].url;
+        video.autoplay=true;
+        video.loop=true;
+        video.muted=true;
+        video.playsInline=true;
+        document.body.appendChild(video);
+    } else {
+        document.body.innerHTML="<h2 style='color:white;'>No active loop</h2>";
+    }
+}
+
+window.onload=loadLoop;
+</script>
 </head>
 <body>
-
-<video id="liveVideo" autoplay muted loop playsinline>
-  <source src="loop.mp4" type="video/mp4">
-</video>
-
-<div class="info">
-  <h2 id="creatorName">AI Model · LIVE</h2>
-  <div class="viewers">🔴 1,243 watching</div>
-</div>
-
-<div class="tip-box">
-  <button class="tip-btn" onclick="tip()">❤️ Tip this model</button>
-</div>
-
-<script>
-const urlParams = new URLSearchParams(window.location.search);
-const user = urlParams.get('user') || "default";
-
-document.getElementById('creatorName').innerText = `${user} · LIVE`;
-
-let loops = JSON.parse(localStorage.getItem('loops') || "[]");
-let activeLoop = loops.find(l => l.owner === user && l.active);
-
-const videoEl = document.getElementById('liveVideo');
-if(activeLoop){
-    videoEl.src = activeLoop.url;
-} else {
-    videoEl.src = "loop.mp4";
-}
-
-function tip(){
-    window.open("https://TU-LINK-DE-PAGO-AQUI",'_blank');
-}
-
-// Refrescar cada 5s para detectar cambios
-setInterval(()=>{
-    loops = JSON.parse(localStorage.getItem('loops') || "[]");
-    let activeLoop = loops.find(l => l.owner === user && l.active);
-    if(activeLoop && videoEl.src !== activeLoop.url){
-        videoEl.src = activeLoop.url;
-    }
-}, 5000);
-</script>
 </body>
 </html>
