--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
     <p>24/7 · Virtual · NSFW</p>
 
     <div class="creators-list" id="creatorsList">
-      <!-- Creators injected here -->
+      <!-- Creators here -->
     </div>
 
     <div class="footer">
@@ -127,32 +127,52 @@
     </div>
   </div>
 
+  <!-- SUPABASE -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script>
+    const supabase = supabaseJs.createClient(
+      "SUPABASE_URL",
+      "SUPABASE_ANON_KEY"
+    );
+  </script>
+
+  <!-- LOGIC -->
   <script>
     const container = document.getElementById("creatorsList");
 
-    // Leer loops
-    const loops = JSON.parse(localStorage.getItem("loops") || "[]");
+    async function loadLiveCreators() {
+      const { data, error } = await supabase
+        .from("loops")
+        .select("owner")
+        .eq("active", true);
 
-    // Obtener solo creadores con loop activo
-    const activeCreators = [...new Set(
-      loops.filter(l => l.active).map(l => l.owner)
-    )];
+      if (error) {
+        container.innerHTML = "<p>Error loading creators</p>";
+        console.error(error);
+        return;
+      }
 
-    if (activeCreators.length === 0) {
-      container.innerHTML = "<p style='opacity:.6'>No models live right now</p>";
+      if (!data || data.length === 0) {
+        container.innerHTML = "<p style='opacity:.6'>No models live right now</p>";
+        return;
+      }
+
+      const creators = [...new Set(data.map(l => l.owner))];
+
+      creators.forEach(owner => {
+        const card = document.createElement("div");
+        card.className = "creator-card";
+
+        const link = document.createElement("a");
+        link.href = `/creator/live.html?creator=${encodeURIComponent(owner)}`;
+        link.innerHTML = `<span class="live-dot">🔴</span>${owner}`;
+
+        card.appendChild(link);
+        container.appendChild(card);
+      });
     }
 
-    activeCreators.forEach(user => {
-      const card = document.createElement("div");
-      card.className = "creator-card";
-
-      const link = document.createElement("a");
-      link.href = `/creator/live.html?user=${encodeURIComponent(user)}`;
-      link.innerHTML = `<span class="live-dot">🔴</span>${user}`;
-
-      card.appendChild(link);
-      container.appendChild(card);
-    });
+    loadLiveCreators();
   </script>
 
 </body>
